hide page overflow and fix header

--- a/app/(pages)/(home)/page.module.scss
+++ b/app/(pages)/(home)/page.module.scss
@@ -7,6 +7,7 @@
   gap: var(--element-spacing);
   padding: var(--nav-to-element-spacing) 0;
   position: relative;
+  overflow: hidden;
 }
 
 .headerGradientContainer {
