--- a/app/(pages)/_components/Header/Header.module.scss
+++ b/app/(pages)/_components/Header/Header.module.scss
@@ -1,21 +1,21 @@
 @use "@/app/(pages)/_globals/mixins.scss";
 
 .header {
-  position: relative;  // Make header the positioning context for mobileMenu
+  position: relative; // Make header the positioning context for mobileMenu
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-block: 26px; 
-  padding-inline: 7%;  
+  padding-block: 26px;
+  padding-inline: 7%;
   background-color: var(--white);
   box-shadow: var(--drop-shadow-header);
-  gap: 50px;
+  gap: 20px;
   height: 142px;
   z-index: 100;
 
   @include mixins.sm-desktop {
-    padding: 24px 80px;
-    gap: 42px;
+    padding: 24px 40px;
+    gap: 32px;
   }
 }
 
@@ -40,7 +40,7 @@
 
 // Mobile Header Links (initially hidden)
 .mobileHeaderLinks {
-  display: none; 
+  display: none;
   text-decoration: none;
   color: var(--dark-grey);
   align-items: center;
@@ -56,12 +56,10 @@
   border-top: 1px solid #ddd;
   display: none;
 
-  @include mixins.phone {
+  @include mixins.tablet {
     display: block;
   }
 }
-
-
 
 .showMenu .mobileMenu {
   width: 100%;
@@ -80,24 +78,25 @@
   justify-content: space-between;
   align-items: center;
   background-color: var(--white);
-  width: 75%;
-  gap: 8px;
-
-  @include mixins.phone {
-    display: none; /* Hide on mobile */
-  }
+  width: 80%;
+  gap: 14px;
 
   @include mixins.tablet {
     width: 100%;
+    display: none;
   }
 }
 
 // Header items (links)
 .headerItems {
+  text-align: center;
   text-decoration: none;
   color: var(--dark-grey);
   @include mixins.fontStyle(1.1rem, 400, 150%, var(--font2));
-  transition: font-weight 0.2s ease, color 0.2s ease;
+  // border: solid 1px green;
+  transition:
+    font-weight 0.2s ease,
+    color 0.2s ease;
 
   &:hover {
     font-weight: var(--bold);
@@ -108,13 +107,13 @@
   }
 }
 
-.headerItemActive {
+.active {
   font-weight: var(--bold);
   color: var(--teal);
 }
 
 // Mobile Styles: Show hamburger icon and hide desktop links
-@include mixins.phone {
+@include mixins.tablet {
   .menuIcon {
     display: block; /* Show the hamburger icon on mobile */
     font-size: 1.5rem;
